--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "pg": "^8.12.0"
   }
 }
