--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "start": "node ../ProjectManagementDocker/app.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "mongodb": "^4.2.0",
     "pg": "^8.12.0"
